# frc-2024-contour-vision

./: README.md  calculations.py  contour localizer.py
c++/: CMakeLists.txt  color_constancy2.cpp  enhancement.cpp  enhancement.h  segmentation.cpp  segmentation.h
python/: color_constancy.py  poor_light_segmenting.py  testing.py
